--- a/Python Basics/9.File_Handling/file_handle.ipynb
+++ b/Python Basics/9.File_Handling/file_handle.ipynb
@@ -43,13 +43,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "**Opening a file `open()`:**\n",
     "\n",
     "When the open() function is used to open a file, it returns a pointer to the beginning of the file. This is called 'file handler' or 'file object'.\n",
@@ -65,7 +58,31 @@
     "\n",
     "A file which is opened should be closed using the close() method. Once a file is opened but not closed, then the data of the file may be corrupted or deleted in some cases. Also, if the file is not closed, the memory utilized by the file is not freed, leading to problems like insufficient memory. This happens when we are working with serval files simultaneously. Hence it is mandatory to close the file.\n",
     "\n",
-    "f.close()"
+    "`f.close()`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " ### **Modes**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "  -----> `r mode`:-   To read data from the file. The file pointer is positioned at the beginning of the file.\n",
+    "\n",
+    " -----> `w mode`:-\tTo wirte data into file. If any data is already present in the file,it would be deleted and the present data will be stored.\n",
+    "\n",
+    " -----> `r+ Mode`:- Opens the file for both reading and writing. The file pointer is placed at the beginning of the file. If the file does not exist, it raises a FileNotFoundError.\n",
+    "\n",
+    " -----> `w+ mode`:-Opens the file for both reading and writing. The file is truncated (emptied) when opened. If the file does not exist, a new file is created.\n",
+    "\n",
+    " -----> `a mode`: a  To append data to the file. Appending means adding at the end of existing data.The filepointer is placed at the end of the file.if the  file does not exist, it will create a new file for writing data.\n",
+    "\n",
+    " -----> `a+ mode`: a+  To append and read data of a file.The file pointer will be at the end of the file if the file exists. If the file does not exist, it creates a new file for reading and writing."
    ]
   },
   {
@@ -92,7 +109,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Using with Statement**"
+    "### **Using with Statement**\n",
+    "- Benifit : Automatically handles Closing files, even if errors occurs"
    ]
   },
   {
@@ -1225,6 +1243,39 @@
     "# Example usage\n",
     "read()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Working with Binary Files**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x01\\x01,\\x01,\\x00\\x00'\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('parakeet.jpg', 'rb') as file:\n",
+    "    content = file.read()\n",
+    "    print(content[:20]) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1243,7 +1294,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
