--- a/Visualization/Seaborn.ipynb
+++ b/Visualization/Seaborn.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,6 +36,47 @@
    "outputs": [
     {
      "data": {
+      "text/plain": [
+       "['anagrams',\n",
+       " 'anscombe',\n",
+       " 'attention',\n",
+       " 'brain_networks',\n",
+       " 'car_crashes',\n",
+       " 'diamonds',\n",
+       " 'dots',\n",
+       " 'dowjones',\n",
+       " 'exercise',\n",
+       " 'flights',\n",
+       " 'fmri',\n",
+       " 'geyser',\n",
+       " 'glue',\n",
+       " 'healthexp',\n",
+       " 'iris',\n",
+       " 'mpg',\n",
+       " 'penguins',\n",
+       " 'planets',\n",
+       " 'seaice',\n",
+       " 'taxis',\n",
+       " 'tips',\n",
+       " 'titanic']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sns.get_dataset_names()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -55,156 +96,143 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>total_bill</th>\n",
+       "      <th>pickup</th>\n",
+       "      <th>dropoff</th>\n",
+       "      <th>passengers</th>\n",
+       "      <th>distance</th>\n",
+       "      <th>fare</th>\n",
        "      <th>tip</th>\n",
-       "      <th>sex</th>\n",
-       "      <th>smoker</th>\n",
-       "      <th>day</th>\n",
-       "      <th>time</th>\n",
-       "      <th>size</th>\n",
+       "      <th>tolls</th>\n",
+       "      <th>total</th>\n",
+       "      <th>color</th>\n",
+       "      <th>payment</th>\n",
+       "      <th>pickup_zone</th>\n",
+       "      <th>dropoff_zone</th>\n",
+       "      <th>pickup_borough</th>\n",
+       "      <th>dropoff_borough</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>16.99</td>\n",
-       "      <td>1.01</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Sun</td>\n",
-       "      <td>Dinner</td>\n",
-       "      <td>2</td>\n",
+       "      <td>2019-03-23 20:21:09</td>\n",
+       "      <td>2019-03-23 20:27:24</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.60</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2.15</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>12.95</td>\n",
+       "      <td>yellow</td>\n",
+       "      <td>credit card</td>\n",
+       "      <td>Lenox Hill West</td>\n",
+       "      <td>UN/Turtle Bay South</td>\n",
+       "      <td>Manhattan</td>\n",
+       "      <td>Manhattan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>10.34</td>\n",
-       "      <td>1.66</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Sun</td>\n",
-       "      <td>Dinner</td>\n",
-       "      <td>3</td>\n",
+       "      <td>2019-03-04 16:11:55</td>\n",
+       "      <td>2019-03-04 16:19:00</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.79</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9.30</td>\n",
+       "      <td>yellow</td>\n",
+       "      <td>cash</td>\n",
+       "      <td>Upper West Side South</td>\n",
+       "      <td>Upper West Side South</td>\n",
+       "      <td>Manhattan</td>\n",
+       "      <td>Manhattan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>21.01</td>\n",
-       "      <td>3.50</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Sun</td>\n",
-       "      <td>Dinner</td>\n",
-       "      <td>3</td>\n",
+       "      <td>2019-03-27 17:53:01</td>\n",
+       "      <td>2019-03-27 18:00:25</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.37</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>2.36</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>14.16</td>\n",
+       "      <td>yellow</td>\n",
+       "      <td>credit card</td>\n",
+       "      <td>Alphabet City</td>\n",
+       "      <td>West Village</td>\n",
+       "      <td>Manhattan</td>\n",
+       "      <td>Manhattan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>23.68</td>\n",
-       "      <td>3.31</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Sun</td>\n",
-       "      <td>Dinner</td>\n",
-       "      <td>2</td>\n",
+       "      <td>2019-03-10 01:23:59</td>\n",
+       "      <td>2019-03-10 01:49:51</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7.70</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>6.15</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>36.95</td>\n",
+       "      <td>yellow</td>\n",
+       "      <td>credit card</td>\n",
+       "      <td>Hudson Sq</td>\n",
+       "      <td>Yorkville West</td>\n",
+       "      <td>Manhattan</td>\n",
+       "      <td>Manhattan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>24.59</td>\n",
-       "      <td>3.61</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Sun</td>\n",
-       "      <td>Dinner</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>239</th>\n",
-       "      <td>29.03</td>\n",
-       "      <td>5.92</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Sat</td>\n",
-       "      <td>Dinner</td>\n",
+       "      <td>2019-03-30 13:27:42</td>\n",
+       "      <td>2019-03-30 13:37:14</td>\n",
        "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>240</th>\n",
-       "      <td>27.18</td>\n",
-       "      <td>2.00</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Sat</td>\n",
-       "      <td>Dinner</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>241</th>\n",
-       "      <td>22.67</td>\n",
-       "      <td>2.00</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>Sat</td>\n",
-       "      <td>Dinner</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>242</th>\n",
-       "      <td>17.82</td>\n",
-       "      <td>1.75</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Sat</td>\n",
-       "      <td>Dinner</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>243</th>\n",
-       "      <td>18.78</td>\n",
-       "      <td>3.00</td>\n",
-       "      <td>Female</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Thur</td>\n",
-       "      <td>Dinner</td>\n",
-       "      <td>2</td>\n",
+       "      <td>2.16</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>1.10</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>13.40</td>\n",
+       "      <td>yellow</td>\n",
+       "      <td>credit card</td>\n",
+       "      <td>Midtown East</td>\n",
+       "      <td>Yorkville West</td>\n",
+       "      <td>Manhattan</td>\n",
+       "      <td>Manhattan</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>244 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     total_bill   tip     sex smoker   day    time  size\n",
-       "0         16.99  1.01  Female     No   Sun  Dinner     2\n",
-       "1         10.34  1.66    Male     No   Sun  Dinner     3\n",
-       "2         21.01  3.50    Male     No   Sun  Dinner     3\n",
-       "3         23.68  3.31    Male     No   Sun  Dinner     2\n",
-       "4         24.59  3.61  Female     No   Sun  Dinner     4\n",
-       "..          ...   ...     ...    ...   ...     ...   ...\n",
-       "239       29.03  5.92    Male     No   Sat  Dinner     3\n",
-       "240       27.18  2.00  Female    Yes   Sat  Dinner     2\n",
-       "241       22.67  2.00    Male    Yes   Sat  Dinner     2\n",
-       "242       17.82  1.75    Male     No   Sat  Dinner     2\n",
-       "243       18.78  3.00  Female     No  Thur  Dinner     2\n",
+       "               pickup             dropoff  passengers  distance  fare   tip  \\\n",
+       "0 2019-03-23 20:21:09 2019-03-23 20:27:24           1      1.60   7.0  2.15   \n",
+       "1 2019-03-04 16:11:55 2019-03-04 16:19:00           1      0.79   5.0  0.00   \n",
+       "2 2019-03-27 17:53:01 2019-03-27 18:00:25           1      1.37   7.5  2.36   \n",
+       "3 2019-03-10 01:23:59 2019-03-10 01:49:51           1      7.70  27.0  6.15   \n",
+       "4 2019-03-30 13:27:42 2019-03-30 13:37:14           3      2.16   9.0  1.10   \n",
        "\n",
-       "[244 rows x 7 columns]"
+       "   tolls  total   color      payment            pickup_zone  \\\n",
+       "0    0.0  12.95  yellow  credit card        Lenox Hill West   \n",
+       "1    0.0   9.30  yellow         cash  Upper West Side South   \n",
+       "2    0.0  14.16  yellow  credit card          Alphabet City   \n",
+       "3    0.0  36.95  yellow  credit card              Hudson Sq   \n",
+       "4    0.0  13.40  yellow  credit card           Midtown East   \n",
+       "\n",
+       "            dropoff_zone pickup_borough dropoff_borough  \n",
+       "0    UN/Turtle Bay South      Manhattan       Manhattan  \n",
+       "1  Upper West Side South      Manhattan       Manhattan  \n",
+       "2           West Village      Manhattan       Manhattan  \n",
+       "3         Yorkville West      Manhattan       Manhattan  \n",
+       "4         Yorkville West      Manhattan       Manhattan  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = sns.load_dataset(\"tips\")\n",
-    "df"
+    "df = sns.load_dataset(\"taxis\")\n",
+    "df.head()"
    ]
   },
   {
@@ -2496,7 +2524,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
