--- a/Python Basics/8.Regular Expression/RegEx.ipynb
+++ b/Python Basics/8.Regular Expression/RegEx.ipynb
@@ -440,7 +440,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +524,7 @@
      "output_type": "stream",
      "text": [
       "hello\n",
-      "Beg. of String: None\n",
+      "Beg. of String: <re.Match object; span=(19, 24), match='month'>\n",
       "Beg. of String: <re.Match object; span=(0, 4), match='Geek'>\n"
      ]
     }
@@ -525,7 +537,7 @@
     "print(match.group())\n",
     "\n",
     "# Beginning of String \n",
-    "match = re.search(r'^month', 'Campus Geek of the month') \n",
+    "match = re.search(r'month$', 'Campus Geek of the month') \n",
     "print('Beg. of String:', match)\n",
     "\n",
     "match = re.search(r'^Geek', 'Geek of the month') \n",
@@ -534,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +554,7 @@
      "output_type": "stream",
      "text": [
       "world\n",
-      "End of String: <re.Match object; span=(31, 36), match='Geeks'>\n"
+      "End of String: ['Geeks']\n"
      ]
     }
    ],
@@ -554,26 +566,26 @@
     "print(match.group())\n",
     "\n",
     "# End of String \n",
-    "match = re.search(r'Geeks$', 'Compute science portal-GeeksforGeeks') \n",
+    "match = re.findall(r'Geeks$', 'Compute science portal-GeeksforGeeks') \n",
     "print('End of String:', match) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "heeeello\n"
+      "heeeeello\n"
      ]
     }
    ],
    "source": [
     "# Matches zero or more occurrences of the preceding character or group\n",
-    "text = \"heeeello\"\n",
+    "text = \"heeeeello\"\n",
     "pattern = r\"he*llo\"\n",
     "match = re.search(pattern, text)\n",
     "print(match.group())"
@@ -581,29 +593,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "heeeello\n"
+      "['hello']\n"
      ]
     }
    ],
    "source": [
     "# Matches one or more occurrences of the preceding character or group\n",
     "\n",
-    "text = \"heeeello\"\n",
-    "pattern = r\"he+llo\"\n",
-    "match = re.search(pattern, text)\n",
-    "print(match.group())"
+    "text = \"hello\"\n",
+    "pattern = r\"hel+o\"\n",
+    "match = re.findall(pattern, text)\n",
+    "print(match)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -660,47 +672,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "p\n"
+      "['ppl']\n"
      ]
     }
    ],
    "source": [
     "text = \"abc apple banana cherry\"\n",
-    "pattern = r\"[pl]\"\n",
-    "matches = re.search(pattern, text)\n",
-    "print(matches.group())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['e', 'l', 'l', 'o', 'o', 'r', 'l', 'd']\n"
-     ]
-    }
-   ],
-   "source": [
-    "text = \"Hello World\"\n",
-    "pattern = r\"[a-z]\"\n",
+    "pattern = r\"[pl]+\"\n",
     "matches = re.findall(pattern, text)\n",
     "print(matches)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ello', 'orld']\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"Hello World\"\n",
+    "pattern = r\"[a-z]+\"\n",
+    "matches = re.findall(pattern, text)\n",
+    "print(matches)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -760,27 +772,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['123']"
+       "['abc123xyz']"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "re.findall(r'[0-9]+', 'abc123xyz')"
+    "re.findall(r'[A-Za-z0-9]+', 'abc123xyz')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -834,49 +846,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ooo\n"
+      "hellooo\n"
      ]
     }
    ],
    "source": [
-    "import re\n",
-    "\n",
     "text = \"helloooo\"\n",
-    "pattern = r\"o{3}\"\n",
+    "pattern = r\"hello{3}\"\n",
     "match = re.search(pattern, text)\n",
     "print(match.group())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "oooooo\n"
+      "helloooooo\n"
      ]
     }
    ],
    "source": [
     "text = \"helloooooo\"\n",
-    "pattern = r\"o{3,}\"\n",
+    "pattern = r\"hello{3,}\"\n",
     "match = re.search(pattern, text)\n",
     "print(match.group())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -896,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -936,28 +946,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "21-11-2024\n",
-      "Thursday\n"
+      "03-01-2025\n",
+      "['Today', 'Friday']\n"
      ]
     }
    ],
    "source": [
-    "match = re.search(r'[\\d]{2}-[\\d]{2}-[\\d]{4}', 'Today is 21-11-2024, Thursday')\n",
-    "match1 = re.search(r'[Thurs]+day\\b', 'Today is 21-11-2024, Thursday')\n",
+    "match = re.search(r'[\\d]{2}-[\\d]{2}-[\\d]{4}', 'Today is 03-01-2025, Friday')\n",
+    "match1 = re.findall(r'[A-Za-z]+day\\b', 'Today is 03-01-2025, Friday')\n",
     "print(match.group())\n",
-    "print(match1.group())"
+    "print(match1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -977,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -989,7 +999,7 @@
     }
    ],
    "source": [
-    "match = re.search(r'\\b\\d{2}-\\d{2}-\\d{4}\\b', '26-08-2020') \n",
+    "match = re.search(r'\\b\\d{2}-\\d{2}-\\d{4}', '26-08-2020') \n",
     "if match:\n",
     "    print(match.group())"
    ]
@@ -1072,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1090,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1108,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1121,12 +1131,12 @@
    ],
    "source": [
     "# Define the regex pattern for matching an email address\n",
-    "email_pattern = r'[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}'\n",
+    "email_pattern = r'[a-zA-Z0-9.-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}'\n",
     "email_pattern1 = r'[\\w.-]+@[\\w.-]+' \n",
     "\n",
     "# Example usage\n",
     "test_string = \"Please contact us at support@example.com for further assistance.\"\n",
-    "matches = re.findall(email_pattern1, test_string)\n",
+    "matches = re.findall(email_pattern, test_string)\n",
     "\n",
     "print(matches)"
    ]
@@ -1142,7 +1152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1161,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1181,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1208,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1227,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1244,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1256,7 +1266,7 @@
     }
    ],
    "source": [
-    "# Replace the first 2 occurrences:\n",
+    "# Replace the first 4 occurrences:\n",
     "txt = \"The King in the North claims he is worthy\"\n",
     "x = re.sub(\"\\s\", \"9\", txt, 4)\n",
     "print(x) "
@@ -1264,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1297,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1317,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1349,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1366,7 +1376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -2054,7 +2064,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
