--- a/Visualization/Matplotlib.ipynb
+++ b/Visualization/Matplotlib.ipynb
@@ -11,53 +11,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **What:**\n",
-    "Matplotlib is a low-level Python library for creating static, animated, and interactive visualizations. It provides precise control over every aspect of a plot.\n",
+    "Matplotlib is a plotting library for the Python programming language and its numerical mathematics extension NumPy. It provides an object-oriented API for embedding plots into applications using general-purpose GUI toolkits like Tkinter, wxPython, Qt, or GTK. There is also a procedural \"pylab\" interface based on a state machine (like OpenGL), designed to closely resemble that of MATLAB, though its use is discouraged. SciPy makes use of Matplotlib.\n",
     "\n",
-    "#### **Why:**\n",
-    "- Essential for creating highly customizable visualizations.\n",
-    "- Useful when detailed adjustments are needed for publication-quality visuals.\n",
-    "- Acts as the foundation for other high-level libraries like Seaborn.\n",
+    "Matplotlib was originally written by John D. Hunter.\n",
     "\n",
-    "#### **Merits:**\n",
-    "- Extremely flexible and customizable.\n",
-    "- Can create almost any type of visualization (2D or 3D).\n",
-    "- Suitable for advanced users needing granular control.\n",
-    "- Can be integrated with other libraries for advanced visualizations.\n",
-    "\n",
-    "#### **Demerits:**\n",
-    "- Verbose and sometimes unintuitive syntax for complex plots.\n",
-    "- Less aesthetically pleasing default styles.\n",
-    "- Steeper learning curve for beginners.\n",
-    "#### **Applications:**\n",
-    "- Custom plots for research papers, presentations, and reports.\n",
-    "- Visualizations where fine control over every detail is required.\n",
-    "- Non-standard visualizations like radar charts or 3D plots."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### **Normal Distribution:**\n",
-    "\n",
-    "The normal distribution, also known as the Gaussian distribution, is a continuous probability distribution that is symmetric around its mean, which is also its median and mode. It is characterized by its bell-shaped curve. The distribution is completely determined by two parameters: the mean (μ) and the standard deviation (σ).\n",
-    "\n",
-    "### **Probability Density Function (pdf):**\n",
-    "\n",
-    "The probability density function is a function that describes the likelihood of a continuous random variable falling within a particular range. \n",
-    "\n",
-    "For the normal distribution\n",
-    "\n",
-    "Here:\n",
-    "\n",
-    "`x` is the variable.\n",
-    "\n",
-    "`μ` is the mean.\n",
-    "\n",
-    "`σ` is the standard deviation.\n",
-    "\n",
-    "The integral of the pdf over the entire range of possible values is equal to 1, indicating that the total probability of all possible outcomes is 1."
+    "Matplotlib supports various types of 2 dimensional and 3 dimensional plots. The support for two dimensional plots is robust. The support for three dimensional plots was added later and while it is good, it is not as robust as 2 dimensional plots."
    ]
   },
   {
