--- a/Python Basics/8.Regular Expression/RegEx.ipynb
+++ b/Python Basics/8.Regular Expression/RegEx.ipynb
@@ -1427,6 +1427,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 63,
    "metadata": {},
    "outputs": [
@@ -1557,7 +1566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1567,13 +1576,27 @@
       "FY2021 Q1 -> $4.85 billion\n",
       "fy2020 Q4 -> $3 billion\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:4: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "<>:5: SyntaxWarning: invalid escape sequence '\\$'\n",
+      "<>:4: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "<>:5: SyntaxWarning: invalid escape sequence '\\$'\n",
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_15764\\746544649.py:4: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "  pattern = \"FY\\d{4} Q[1-4]\"\n",
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_15764\\746544649.py:5: SyntaxWarning: invalid escape sequence '\\$'\n",
+      "  pattern1 = \"\\$[\\d.]+ \\w+\"\n"
+     ]
     }
    ],
    "source": [
     "text = '''The gross cost of operating lease vehicles in FY2021 Q1 was $4.85 billion.\n",
     "In previous quarter i.e. fy2020 Q4 it was $3 billion.\n",
     "'''\n",
-    "pattern = \"FY\\d{4} Q[1-5]\"\n",
+    "pattern = \"FY\\d{4} Q[1-4]\"\n",
     "pattern1 = \"\\$[\\d.]+ \\w+\"\n",
     "\n",
     "\n",
@@ -1854,7 +1877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1924,7 +1947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
