--- a/Visualization/Seaborn.ipynb
+++ b/Visualization/Seaborn.ipynb
@@ -16,7 +16,7 @@
     "import pandas as pd \n",
     "import numpy as np \n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt \n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
        " 'titanic']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -96,142 +96,86 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>pickup</th>\n",
-       "      <th>dropoff</th>\n",
-       "      <th>passengers</th>\n",
-       "      <th>distance</th>\n",
-       "      <th>fare</th>\n",
+       "      <th>total_bill</th>\n",
        "      <th>tip</th>\n",
-       "      <th>tolls</th>\n",
-       "      <th>total</th>\n",
-       "      <th>color</th>\n",
-       "      <th>payment</th>\n",
-       "      <th>pickup_zone</th>\n",
-       "      <th>dropoff_zone</th>\n",
-       "      <th>pickup_borough</th>\n",
-       "      <th>dropoff_borough</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>smoker</th>\n",
+       "      <th>day</th>\n",
+       "      <th>time</th>\n",
+       "      <th>size</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2019-03-23 20:21:09</td>\n",
-       "      <td>2019-03-23 20:27:24</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.60</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>2.15</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>12.95</td>\n",
-       "      <td>yellow</td>\n",
-       "      <td>credit card</td>\n",
-       "      <td>Lenox Hill West</td>\n",
-       "      <td>UN/Turtle Bay South</td>\n",
-       "      <td>Manhattan</td>\n",
-       "      <td>Manhattan</td>\n",
+       "      <td>16.99</td>\n",
+       "      <td>1.01</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2019-03-04 16:11:55</td>\n",
-       "      <td>2019-03-04 16:19:00</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.79</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>9.30</td>\n",
-       "      <td>yellow</td>\n",
-       "      <td>cash</td>\n",
-       "      <td>Upper West Side South</td>\n",
-       "      <td>Upper West Side South</td>\n",
-       "      <td>Manhattan</td>\n",
-       "      <td>Manhattan</td>\n",
+       "      <td>10.34</td>\n",
+       "      <td>1.66</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2019-03-27 17:53:01</td>\n",
-       "      <td>2019-03-27 18:00:25</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.37</td>\n",
-       "      <td>7.5</td>\n",
-       "      <td>2.36</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>14.16</td>\n",
-       "      <td>yellow</td>\n",
-       "      <td>credit card</td>\n",
-       "      <td>Alphabet City</td>\n",
-       "      <td>West Village</td>\n",
-       "      <td>Manhattan</td>\n",
-       "      <td>Manhattan</td>\n",
+       "      <td>21.01</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2019-03-10 01:23:59</td>\n",
-       "      <td>2019-03-10 01:49:51</td>\n",
-       "      <td>1</td>\n",
-       "      <td>7.70</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>6.15</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>36.95</td>\n",
-       "      <td>yellow</td>\n",
-       "      <td>credit card</td>\n",
-       "      <td>Hudson Sq</td>\n",
-       "      <td>Yorkville West</td>\n",
-       "      <td>Manhattan</td>\n",
-       "      <td>Manhattan</td>\n",
+       "      <td>23.68</td>\n",
+       "      <td>3.31</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2019-03-30 13:27:42</td>\n",
-       "      <td>2019-03-30 13:37:14</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2.16</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>1.10</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>13.40</td>\n",
-       "      <td>yellow</td>\n",
-       "      <td>credit card</td>\n",
-       "      <td>Midtown East</td>\n",
-       "      <td>Yorkville West</td>\n",
-       "      <td>Manhattan</td>\n",
-       "      <td>Manhattan</td>\n",
+       "      <td>24.59</td>\n",
+       "      <td>3.61</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>Dinner</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "               pickup             dropoff  passengers  distance  fare   tip  \\\n",
-       "0 2019-03-23 20:21:09 2019-03-23 20:27:24           1      1.60   7.0  2.15   \n",
-       "1 2019-03-04 16:11:55 2019-03-04 16:19:00           1      0.79   5.0  0.00   \n",
-       "2 2019-03-27 17:53:01 2019-03-27 18:00:25           1      1.37   7.5  2.36   \n",
-       "3 2019-03-10 01:23:59 2019-03-10 01:49:51           1      7.70  27.0  6.15   \n",
-       "4 2019-03-30 13:27:42 2019-03-30 13:37:14           3      2.16   9.0  1.10   \n",
-       "\n",
-       "   tolls  total   color      payment            pickup_zone  \\\n",
-       "0    0.0  12.95  yellow  credit card        Lenox Hill West   \n",
-       "1    0.0   9.30  yellow         cash  Upper West Side South   \n",
-       "2    0.0  14.16  yellow  credit card          Alphabet City   \n",
-       "3    0.0  36.95  yellow  credit card              Hudson Sq   \n",
-       "4    0.0  13.40  yellow  credit card           Midtown East   \n",
-       "\n",
-       "            dropoff_zone pickup_borough dropoff_borough  \n",
-       "0    UN/Turtle Bay South      Manhattan       Manhattan  \n",
-       "1  Upper West Side South      Manhattan       Manhattan  \n",
-       "2           West Village      Manhattan       Manhattan  \n",
-       "3         Yorkville West      Manhattan       Manhattan  \n",
-       "4         Yorkville West      Manhattan       Manhattan  "
+       "   total_bill   tip     sex smoker  day    time  size\n",
+       "0       16.99  1.01  Female     No  Sun  Dinner     2\n",
+       "1       10.34  1.66    Male     No  Sun  Dinner     3\n",
+       "2       21.01  3.50    Male     No  Sun  Dinner     3\n",
+       "3       23.68  3.31    Male     No  Sun  Dinner     2\n",
+       "4       24.59  3.61  Female     No  Sun  Dinner     4"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = sns.load_dataset(\"taxis\")\n",
+    "df = sns.load_dataset(\"tips\")\n",
     "df.head()"
    ]
   },
@@ -743,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +703,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -786,7 +730,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -813,7 +757,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -842,16 +786,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "np.int64(1)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -878,16 +822,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "np.int64(0)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -905,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +863,7 @@
        "Name: tip, dtype: float64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -930,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -948,7 +892,7 @@
        "Name: tip, dtype: float64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -959,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1062,7 +1006,7 @@
        "7   Sun  Female   60.61   19.872222"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1076,6 +1020,27 @@
    "metadata": {},
    "source": [
     "### **Finding the unique values in column**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Dinner', 'Lunch']\n",
+       "Categories (2, object): ['Lunch', 'Dinner']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['time'].unique()"
    ]
   },
   {
@@ -1107,32 +1072,11 @@
     {
      "data": {
       "text/plain": [
-       "['Dinner', 'Lunch']\n",
-       "Categories (2, object): ['Lunch', 'Dinner']"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['time'].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
        "170    10.0\n",
        "Name: tip, dtype: float64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1143,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1153,7 +1097,7 @@
        "Name: tip, dtype: float64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1164,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1330,7 +1274,7 @@
        "[76 rows x 7 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1348,7 +1292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1360,7 +1304,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1371,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1523,7 +1467,7 @@
        "95        40.17   4.73    Male    Yes   Fri  Dinner     4"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1534,7 +1478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1702,7 +1646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1719,9 +1663,8 @@
     }
    ],
    "source": [
-    "# Time Analysis\n",
-    "smoking_analysis = df.groupby('time')[['total_bill', 'tip']].mean()\n",
-    "print('\\nSmoking vs. Non-Smoking Analysis:\\n', smoking_analysis)"
+    "time_analysis = df.groupby('time')[['total_bill', 'tip']].mean()\n",
+    "print('\\nSmoking vs. Non-Smoking Analysis:\\n', time_analysis)"
    ]
   },
   {
@@ -1751,27 +1694,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "day\n",
-       "Thur    169.83\n",
-       "Fri      51.96\n",
-       "Sat     260.40\n",
-       "Sun     247.39\n",
+       "Thur    2.784098\n",
+       "Fri     2.734737\n",
+       "Sat     2.993103\n",
+       "Sun     3.255132\n",
        "Name: tip, dtype: float64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.groupby('day')['tip'].sum()"
+    "df.groupby('day')['tip'].mean()"
    ]
   },
   {
